syntax = "proto3";

package access.service;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/v8platform/ras-grpc-gw/pkg/gen/access/service;access_service";

service AuthService {
  // Login service
  rpc SingIn(GetRequest) returns (Tokens) {};
  rpc Register(GetRequest) returns (google.protobuf.Empty) {};
  rpc Refresh(RefreshRequest) returns (Tokens) {};
}

message GetRequest {

  string user = 1;
  string password = 2;

}

message Tokens {
  string access_token = 1;
  string refresh_token = 2;
}

message RefreshRequest {
  string refresh_token = 1;
}
